--- a/whud_navigation/package.xml
+++ b/whud_navigation/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>whud_navigation</name>
   <version>0.0.0</version>
   <description>The whud_navigation package</description>
